--- a/BethanysPieShopHRM.App/_Imports.razor
+++ b/BethanysPieShopHRM.App/_Imports.razor
@@ -6,7 +6,9 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using BethanysPieShopHRM.Shared
+@using BethanysPieShopHRM
 @using BethanysPieShopHRM.App
 @using BethanysPieShopHRM.App.Shared
+@using BethanysPieShopHRM.App.Helper
 @using BethanysPieShopHRM.App.Components
+@using BethanysPieShopHRM.Shared
