--- a/BethanysPieShopHRM.App/Components/EmployeeCard.razor
+++ b/BethanysPieShopHRM.App/Components/EmployeeCard.razor
@@ -8,8 +8,9 @@
                 <img src="@($"https://gillcleerenpluralsight.blob.core.windows.net/person/{Employee.EmployeeId}.jpg")" class="employee-card" />
             </div>
             <button class="btn btn-primary btn-sm mb-1" @onclick="@(async () => await EmployeeQuickViewClicked.InvokeAsync(Employee))">Quick view</button>
-            @*<a href="@($"employeedetail/{Employee.EmployeeId}")" class="btn btn-outline-primary">Full details</a>*@
-            <button class="btn btn-outline-primary btn-sm mb-1" @onclick="(() => NavigateToDetails(Employee))">Full details</button>
+            <a href="@($"employeedetail/{Employee.EmployeeId}")" class="btn btn-outline-primary">Full details</a>
+            @*<button class="btn btn-outline-primary btn-sm mb-1" @onclick="(() => NavigateToDetails(Employee))">Full details</button>*@
+            <a href="@($"employeeedit/{Employee.EmployeeId}")" class="btn btn-outline-primary">Edit employee</a>
         </div>
     </div>
 </div>
