--- a/BethanysPieShopHRM.App/Components/EmployeeCard.razor
+++ b/BethanysPieShopHRM.App/Components/EmployeeCard.razor
@@ -5,7 +5,7 @@
         </div>
         <div class="card-body employee-card text-center">
             <div class="mb-3">
-                <img src="@($"https://gillcleerenpluralsight.blob.core.windows.net/person/{Employee.EmployeeId}.jpg")" class="employee-card" />
+                <img src="@Employee.ImageName" class="employee-img rounded-circle img-fluid" />
             </div>
             <button class="btn btn-primary btn-sm mb-1" @onclick="@(async () => await EmployeeQuickViewClicked.InvokeAsync(Employee))">Quick view</button>
             <a href="@($"employeedetail/{Employee.EmployeeId}")" class="btn btn-outline-primary">Full details</a>
