--- a/BethanysPieShopHRM.App/Pages/EmployeeEdit.razor
+++ b/BethanysPieShopHRM.App/Pages/EmployeeEdit.razor
@@ -8,6 +8,8 @@
         <h1 class="page-title">Details for @Employee.FirstName @Employee.LastName</h1>
         <EditForm Model="@Employee" OnValidSubmit="@HandleValidSubmit" OnInvalidSubmit="@HandleInvalidSubmit">
 
+            <DataAnnotationsValidator />
+            <ValidationSummary />
             @if (Employee.EmployeeId == 0)
             {
                 <div class="row mb-3">
@@ -23,6 +25,7 @@
                 <div class="col-md-8">
                     <InputText id="lastName" @bind-Value="@Employee.LastName" class="form-control col-md-8" placeholder="Enter last name"></InputText>
                 </div>
+                <ValidationMessage class="offset-md-3 col-md-8" For="@(() => Employee.LastName)" />
             </div>
 
             <div class="row mb-3">
@@ -30,6 +33,7 @@
                 <div class="col-md-8">
                     <InputText id="firstName" class="form-control col-md-8" @bind-Value="@Employee.FirstName" placeholder="Enter first name"></InputText>
                 </div>
+                <ValidationMessage class="offset-md-3 col-md-8" For="@(() => Employee.FirstName)" />
             </div>
 
             <div class="row mb-3">
@@ -44,6 +48,7 @@
                 <div class="col-md-8">
                     <InputText id="email" class="form-control col-md-8" @bind-Value="@Employee.Email" placeholder="Enter email"></InputText>
                 </div>
+                <ValidationMessage class="offset-md-3 col-md-8" For="@(() => Employee.Email)" />
             </div>
 
             <div class="row mb-3">
@@ -169,6 +174,7 @@
                 <div class="col-md-8">
                     <InputTextArea id="comment" class="form-control" @bind-Value="@Employee.Comment" placeholder="Enter comment"></InputTextArea>
                 </div>
+                <ValidationMessage class="offset-md-3 col-md-8" For="@(() => Employee.Comment)" />
             </div>
 
             <button type="submit" class="btn btn-primary me-1">Save employee</button>
