--- a/BethanysPieShopHRM.App/_Imports.razor
+++ b/BethanysPieShopHRM.App/_Imports.razor
@@ -6,9 +6,12 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
+
 @using BethanysPieShopHRM
 @using BethanysPieShopHRM.App
 @using BethanysPieShopHRM.App.Shared
 @using BethanysPieShopHRM.App.Helper
 @using BethanysPieShopHRM.App.Components
 @using BethanysPieShopHRM.Shared
+
+@using BethanysPieShopHRM.ComponentsLibrary
