#8-6: Adding authentication with Auth0

--- a/BethanysPieShopHRM.App/_Imports.razor
+++ b/BethanysPieShopHRM.App/_Imports.razor
@@ -14,4 +14,7 @@
 @using BethanysPieShopHRM.App.Components
 @using BethanysPieShopHRM.Shared
 
+@using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.AspNetCore.Authorization
+
 @using BethanysPieShopHRM.ComponentsLibrary
