--- a/BethanysPieShopHRM.App/Pages/EmployeeOverview.razor
+++ b/BethanysPieShopHRM.App/Pages/EmployeeOverview.razor
@@ -1,7 +1,7 @@
 ﻿@page "/employeeoverview"
 <PageTitle>@Title</PageTitle>
-
 <h2>Employee Overview</h2>
+@attribute [Authorize]
 
 @if (Employees == null)
 {
