--- a/BethanysPieShopHRM.App/Components/EmployeeCard.razor
+++ b/BethanysPieShopHRM.App/Components/EmployeeCard.razor
@@ -10,7 +10,7 @@
             <button class="btn btn-primary btn-sm mb-1" @onclick="@(async () => await EmployeeQuickViewClicked.InvokeAsync(Employee))">Quick view</button>
             <a href="@($"employeedetail/{Employee.EmployeeId}")" class="btn btn-outline-primary">Full details</a>
             @*<button class="btn btn-outline-primary btn-sm mb-1" @onclick="(() => NavigateToDetails(Employee))">Full details</button>*@
-            <a href="@($"employeeedit/{Employee.EmployeeId}")" class="btn btn-outline-primary">Edit employee</a>
+            <a id="detailnavlink" href="@($"employeeedit/{Employee.EmployeeId}")" class="btn btn-outline-primary btn-sm mb-1">Edit employee</a>
         </div>
     </div>
 </div>
